fix: fix input overflow on mobile in BaseConverter

--- a/src/sections/FoundationsCS/BaseConverter.module.scss
+++ b/src/sections/FoundationsCS/BaseConverter.module.scss
@@ -35,6 +35,7 @@
 
 .input {
   flex: 1;
+  min-width: 0;
   padding: $space-2;
   border-radius: 0.4rem;
   border: 1px solid $border-color;
@@ -42,10 +43,16 @@
   color: $text-gray-300;
   font-size: $fs-body;
   text-align: left;
+  box-sizing: border-box;
 
   &:focus {
     outline: none;
     border-color: $primary;
+  }
+
+  @media (max-width: 600px) {
+    font-size: calc($fs-body * 0.95);
+    padding: $space-2 $space-1;
   }
 }
 
